# learn-coding-practice

./: .gitignore
C/: 1  1.cpp  ]  constchar  constchar.c  cscope.files  cscope.in.out  cscope.out  cscope.po.out  dd  dd.cpp  forktest.c  freeheap  freeheap.cpp  header.c  header.h  int  int.c  makefile  n.cpp  namespace  namespace.cpp  new  new.cpp  new.s  switch  switch.cpp  tags  test  test.c
C/HW_jikao/: try  xmov.cpp
C/Interview/: SuiLan.py  main  tencent.cpp  try.cpp
C/Makefile/: main  main.cpp  makefile
C/Matrixclass/: Matrix.cpp  Matrix.h  MatrixC.c  MatrixC.h  main  makefile  test.cpp  testlibs.c  testlibs.h
C/OJ/: 1003.cpp  1004  1006.cpp  1009.cpp  1010  1010.cpp  1010.cpp.bak.ot  bak_1010.cpp  data_1009  p1000.cpp  p1001.cpp  p1002.cpp  p1004.cpp  p1005.cpp  p1007.cpp  p1008.cpp  p1010  p1010.cpp  p1014.cpp  p1068.cpp  p1328  p1328.cpp  try  try.cpp
C/array_memory/: try  try.cpp
C/assert/: try  try.c  try.cpp
C/bignumber/: \  bignumber.c  bignumber.h  main  makefile  test.c
C/class/: ambiguous  ambiguous.cpp  assign  assign.cpp  datastr  datastr.c  datastr.c.orig  datastr.h  derive  derive.cpp  makefile  multi_state  multi_state.cpp  try  try.c
C/closure/: CMakeLists.txt  source.cpp
C/cmake/: CMakeLists.txt  clear.sh  fun.cpp  fun.h  func.cpp  main.cpp  play.cpp  play.h  try.cpp
C/cmake/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
C/const_cast/: cast  cast.cpp  try  try.cpp
C/cuda/: CMakeLists.txt  hello_world.cu  main  main.cu  main_work.cu
C/curl/: main.cpp
C/factor/: main  main.cpp  res.md
C/file/: file.txt  try  try.cpp
C/fileIO/: CMakeLists.txt  io.cpp  io_iter.cpp  main.cpp
C/function/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
C/glog/: gflags  gflags.cpp  glog  glog.cpp  main.INFO  makefile  myflags.h  myinfo20181025-120344.19038  myinfo20181025-120458.19093  myinfo20181025-132759.21852  myinfo20181025-132818.21864  myinfo20181025-133559.22095  myinfo20181025-140525.23417  myinfo20181025-142215.24005  myinfo20181025-142810.24260  myinfo20181025-142842.24299  myinfo20181025-145912.25853  myinfo20181025-151921.26793  myinfo20181025-151927.26794  myinfo20181025-151930.26803  myinfo20181025-151938.26829
C/heapsort/: try  try.cpp
C/high_order/: CMakeLists.txt  main.cpp
C/i++i/: try  try.cpp
C/index_squence/: CMakeLists.txt  main.cpp  utils.hpp
C/invertlist/: list.cpp  list.h  main  main.cpp  makefile
C/lambda/: CMakeLists.txt  markdown.md  try  try.cpp
C/learnnasm/: dd
C/libs/: dynamic.cpp  dynamic.h  main1  main1.cpp  makefile  static.cpp  static.h
C/list_init/: try  try.cpp
C/lrvalue/: CMakeLists.txt  try  try.cpp  try_return.cpp
C/micros/: try  try.cpp
C/ml_algs/: kmeans.cpp
C/ml_algs/PCA/: CMakeLists.txt  PCA.cpp  play.cpp
C/mxnet/: makefile  try  try.cpp
C/nasm 和 C 混编/: Clan  Clan.c  dd.asm  makefile  nasm.asm  out
C/opencv/: CMakeLists.txt  ConnectedDomain.cpp  ConnectedDomain.h  grayscale.cpp  grayscale.h  main  main.cpp  makefile  makefile.so.bak  try.cpp
C/precision/: try  try.cpp
C/pugixml/: DSM.arxml  makefile  try  try.cpp
C/pybind11/: CMakeLists.txt  call.py  clear.sh  fun.cpp  fun.h  main.cpp  play.cpp  play.h
C/pybind11/example/: CMakeLists.txt  main.cpp  play.cpp
C/pybind11/simple/: CMakeLists.txt  main.cpp
C/random/: CMakeLists.txt  main.cpp
C/smartptr/: try  try.cpp
C/socket/: client  client.c  clientbak.c  makefile  server  server.c  serverbak.c
C/stl/: CMakeLists.txt  blocking_queue.hpp  queue.cpp  set.cpp  try  try.cpp  tuple.cpp  unordered  unordered.cpp  vector  vector.cpp
C/stringstream/: try  try.cpp  xxx.pb
C/sys_time/: CMakeLists.txt  main.cpp
C/system/: main  main.c  makefile  shell  shell.c
C/template/: head.hpp  main  main.cpp  meta.hpp
C/tryopencv/: makefile  tryopencv.cpp
C/进程线程/: CMakeLists.txt  async.cpp  fork  makefile  test_thread  test_thread.c  thread  thread.cpp  thread_pool.cpp
js/: calling.js  function  jscode.js  jsdefination.js  myfirstjs
myOS/: boot.asm  pmtest1.asm  try.asm
python/: bp.py  cross_entropy.py  function.py  get_mac.py  hellopython.py  if.py  image.py  loop.py  myClass.py  printFunClss.py  printfromhead.py  printlist.py  readfile.py  refer.py  request.py  test.sh  trylist.py  生成器.py
python/2048/: GameField.py  cscope.file  cscope.files  cscope.in.out  cscope.out  cscope.po.out  m2048.bak.py  m2048.py  m2048_autopep8.py  m2048_yapf.py  tags
python/ABC/: AbstractClass.py  Interface.py  classmethods.py
python/DBC比较/: AS.dbc  AS24_HYB.dbc  AS26HYB.dbc  AS26_HYB.dbc  CAN2_HYB_CAN_Ku.dbc  DBC Contast_Layoutbylc_luo.xlsx  EP1_HYB.dbc  IP34_HYB.dbc  cmp.py  cmp001.py  cmp002.py  cmp003.py  cmp004.py  cmp005.py  cmpk228.py  cmpk228_002.py  result.txt  test.py  test_dbc_output004.dbc  test_dbc_output005.dbc  test_output.dbc  test_output1.dbc
python/Log/: tryLog.py
python/Object-Detection/: README.md  gen_lst.py  train.py
python/Pickle/: main.py  readpickle.py  usepickle.py
python/QT/: un.py  untitled.ui
python/Sofile/: libtest.c  main.py  makefile
python/Tensorflow/: graph.py  run  tensorboard.py  transConv.py  try.py
python/XML/: AUTO.arxml  AUTOSAR_Types.arxml  BAL.arxml  D3201_BMS_AR2BSW_BAL.arxml  D3216_BMS_AR2BSW_DT.arxml  D3217_BMS_AR2BSW_IF.arxml  DSMCTR.arxml  Dcm_VID41_SWCD_dynamic.arxml  IF.arxml  result.xls  result_002.xls  try.py  xmlpro_001.py  xmlpro_002.py  xmlpro_003.py
python/backup/: FuncData.py  back_tar.py  back_zip.py  cscope.files  cscope.in.out  cscope.out  cscope.po.out  pure_v4_argv.py  tags  vimpro
python/ccpp混合/: libtest.cpp  main.py  makefile  test  test.c
python/image2ascii/: main.py
python/importlib/: main.py  mod1.py  mod2.py
python/iter_len/: try.py
python/learn/: affine.py  cityscapes_cv2.py  edge.py  equaliza.py  learned_augs.py  lr_scheduler.py  transform.py  transform_cv2.py
python/lm_script/: json2csv.py  res.csv  testset_filename_to_id.json  测试集1的filename_id对应关系.csv
python/logger/: main.py  mod.py
python/map/: try.py
python/matplotlib/: try.py
python/modifyMat/: addnoisetomat.py  indata.mat  outdata.mat
(+194 files in other folders)
